   Importantly, if ~/.Rcache already exists, then that will be used by
   default.  This is done in order to not lose previously cached files.
   Users with an existing folder who wish to move to the new standard need
   to move or remove the ~/.Rcache folder manually.

NEW FEATURES:

 * Option 'R.cache.rootPath' now defaults to environment variable
   'R_CACHE_ROOTPATH' if it is set.

DEPRECATED & DEFUNCT:
 
 * Previously deprecated options 'R.cache::rootPath', 'R.cache::touchOnLoad',
   and 'R.cache::compress' are now defunct.  Likewise, environment variable
   'R_CACHE_PATH' and argument onError="print" for loadCache() are now defunct.


Version: 0.13.0 [2018-01-03]

SIGNIFICANT CHANGES:

 * Package now formally requires R (>= 2.14.0) released October 2011.

NEW FEATURES:
 
 * Now package gives a more informative error message in the rare cases it
   fails to create the cache root directory or fails to save a cache file.

 * Updated loadCache() to recognize new file-format version 3 coming to R.

 * Added options 'R.cache.enabled', which defaults to TRUE, for controlling
   whether loadCache() and saveCache() should read/write from cache or not.
   This provides an easy mechanism for temporarily disabling R.cache.

 * Harmonized R.cache options to all have names prefixed with 'R.cache.'.

 * clearCache() now prompts the user via readline(), which is always visible,
   i.e. it can neither be captured nor sinked.

SOFTWARE QUALITY:
 
 * TESTS: Increased test coverage.

DEPRECATED & DEFUNCT:
 
 * Using onError = "print" for loadCache() is deprecated and replaced by
   new onError = "message".

 * Deprecated R.cache options 'R.cache::rootPath', 'R.cache::touchOnLoad',
   and 'R.cache::compress'.  Use 'R.cache.rootPath', 'R.cache.touchOnLoad',
   and 'R.cache.compress' instead.

 
Version: 0.12.0 [2015-11-12]
 
NEW FEATURES:
 
 * Now all prompt and verbose messages are send to the standard error (instead
   of the standard output).
 